--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-query-params": "^1.0.7",
     "react-scripts": "1.0.17",
     "react-websocket": "^2.0.0"
   },
